Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0
-
None
-
Ubuntu 14.10 64 bit
Windows 7 64 bit
Description
After starting Creator and loading a session which contains a project (e.g. say the last session), the "add existing file/directory" context menu (i.e. the menu which shows up when right-clicking on the project name in the project tree in the side bar) does not add the file until the editor's "active file" makes a cahnge from displaying one of the project's source/header/other file to displaying the project's .pro file. If the editor opens with the .pro file in view when Creator starts (i.e. the .pro file is the "active file" in the editor when the session is loaded) then i have to first switch to one of the project's source/header/other file and then back to the .pro file, and only afte these two changes of the "active file" in the editor will the "add ing file/directory" work.
To summarize, it takes a switch from some source/header/other file to the .pro file in the editor to make the "add existing file/directory" menu work; until this swich is made the menu does not add the selected file/directory to the project
PS
Just a remark, maybe it will be helpful: there is a visual hint that "add existing file/directory" is not working properly: if the editor opens with the .pro file in view when Creator loads a session (i.e. the .pro file is the "active file" in the editor when a session is loaded), then the "add existing file/directory" menu items are disabled, and it will take a switch in the editor from the .pro file to another file, and then back to the .pro file, to have the "add existing file/directory" enabled. However, this behavior (those menu items being disabled) is not ALWAYS exhibited, but i couldn't identify exactly when it is and when it's not.
PPS
I'm not absolutely sure, but i think this is a regression, don't remember running into this before, (it might be that i was always switching to viewing the ".pro" file when adding a file, dunno). Anyway, i think it's worth checking if this behavior was also present in the older 3.3 and/or 3.2 versions, there's a good chance this is a regression.
Attachments
For Gerrit Dashboard: QTCREATORBUG-14295 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
110600,4 | ProjectTree: Fix adding files from context menu | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |