ProjectTree: Fix adding files from context menu

We need to retrieve the current node before the dialog opens up.
While the dialog has focus, the current node depends on what is
visible in the EditorManager.

Change-Id: Icdb212e8d837c9cd789e369f76d6a136d46fcaae
Task-number: QTCREATORBUG-14295
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>